# quantum_battleship

./: LICENSE  README.md  main.py  pyproject.toml  temp.ipynb
