[project]
name = "quantum-battleship"
version = "0.1.0"
description = "Quantum Battleship Simulator Game"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pennylane>=0.43.0",
    "plotly>=6.3.1",
    "qiskit>=2.2.2",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-runtime>=0.43.1",
]
